--- a/bbl/i18n/nl/BambuStudio_nl.po
+++ b/bbl/i18n/nl/BambuStudio_nl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-02-22 18:04+0800\n"
+"POT-Creation-Date: 2023-02-23 17:50+0800\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -1223,27 +1223,6 @@ msgstr "Geen printer"
 msgid "..."
 msgstr ""
 
-msgid "Heat the nozzle"
-msgstr "Verwarm de nozzle"
-
-msgid "Cut filament"
-msgstr "Filament afsnijden"
-
-msgid "Pull back current filament"
-msgstr "huidig filament terugtrekken"
-
-msgid "Push new filament into extruder"
-msgstr "Nieuw filament in de extruder laden"
-
-msgid "Purge old filament"
-msgstr "Oud filament verwijderen"
-
-msgid "Feed new filament from external spool"
-msgstr ""
-
-msgid "Confirm whether the filament has been extruded"
-msgstr ""
-
 msgid "?"
 msgstr " ?"
 
@@ -1293,6 +1272,27 @@ msgstr "Opnieuw kalibreren"
 
 msgid "Cancel calibration"
 msgstr "Kalibreren afbreken"
+
+msgid "Heat the nozzle"
+msgstr "Verwarm de nozzle"
+
+msgid "Cut filament"
+msgstr "Filament afsnijden"
+
+msgid "Pull back current filament"
+msgstr "huidig filament terugtrekken"
+
+msgid "Push new filament into extruder"
+msgstr "Nieuw filament in de extruder laden"
+
+msgid "Purge old filament"
+msgstr "Oud filament verwijderen"
+
+msgid "Feed new filament from external spool"
+msgstr ""
+
+msgid "Confirm whether the filament has been extruded"
+msgstr ""
 
 msgid ""
 "Choose an AMS slot then press \"Load\" or \"Unload\" button to automatically "
@@ -1677,6 +1677,9 @@ msgstr "Factor K"
 
 msgid "Factor N"
 msgstr "Factor N"
+
+msgid "Setting Virtual slot information while printing is not supported"
+msgstr ""
 
 msgid "Please input a valid value (K in 0~0.5)"
 msgstr "Voer een geldige waarde in (K in 0 ~ 0,5)"
