--- a/bbl/i18n/hu/BambuStudio_hu.po
+++ b/bbl/i18n/hu/BambuStudio_hu.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-02-22 18:04+0800\n"
+"POT-Creation-Date: 2023-02-23 17:50+0800\n"
 "Language: hu\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1213,27 +1213,6 @@ msgstr "Nincs nyomtató"
 msgid "..."
 msgstr ""
 
-msgid "Heat the nozzle"
-msgstr "Heat the nozzle"
-
-msgid "Cut filament"
-msgstr "Filament vágása"
-
-msgid "Pull back current filament"
-msgstr "Jelenlegi filament visszahúzása"
-
-msgid "Push new filament into extruder"
-msgstr "Új filament betöltése az extruderbe"
-
-msgid "Purge old filament"
-msgstr "Régi filament kiöblítése"
-
-msgid "Feed new filament from external spool"
-msgstr ""
-
-msgid "Confirm whether the filament has been extruded"
-msgstr ""
-
 msgid "?"
 msgstr "?"
 
@@ -1283,6 +1262,27 @@ msgstr "Kalibrálja újra"
 
 msgid "Cancel calibration"
 msgstr "Kalibrálás megszakítása"
+
+msgid "Heat the nozzle"
+msgstr "Heat the nozzle"
+
+msgid "Cut filament"
+msgstr "Filament vágása"
+
+msgid "Pull back current filament"
+msgstr "Jelenlegi filament visszahúzása"
+
+msgid "Push new filament into extruder"
+msgstr "Új filament betöltése az extruderbe"
+
+msgid "Purge old filament"
+msgstr "Régi filament kiöblítése"
+
+msgid "Feed new filament from external spool"
+msgstr ""
+
+msgid "Confirm whether the filament has been extruded"
+msgstr ""
 
 msgid ""
 "Choose an AMS slot then press \"Load\" or \"Unload\" button to automatically "
@@ -1663,6 +1663,9 @@ msgstr "Factor K"
 
 msgid "Factor N"
 msgstr "Factor N"
+
+msgid "Setting Virtual slot information while printing is not supported"
+msgstr ""
 
 msgid "Please input a valid value (K in 0~0.5)"
 msgstr "Please input a valid value (K in 0~0.5)"
