--- a/bbl/i18n/de/BambuStudio_de.po
+++ b/bbl/i18n/de/BambuStudio_de.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-02-17 23:01+0800\n"
+"POT-Creation-Date: 2023-03-05 17:03+0800\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Heiko Liebscher <hliebschergmail.com>\n"
 "Language-Team: \n"
@@ -5596,6 +5596,9 @@ msgstr "Gizmo SLA-Unterstützungspunkte"
 msgid "Gizmo FDM paint-on seam"
 msgstr "Gizmo FDM Seam aufgemalt"
 
+msgid "Swtich between Prepare/Prewview"
+msgstr ""
+
 msgid "Plater"
 msgstr "Druckplatte"
 
@@ -5662,6 +5665,9 @@ msgstr "Horizontaler Schieberegler - Aktiven Schieber nach rechts bewegen"
 
 msgid "On/Off one layer mode of the vertical slider"
 msgstr "Ein/Aus Einschichtmodus des vertikalen Schiebereglers"
+
+msgid "On/Off g-code window"
+msgstr ""
 
 msgid "Move slider 5x faster"
 msgstr "Schieberegler 5x schneller bewegen"
@@ -6489,7 +6495,11 @@ msgid "Bridge density"
 msgstr "Brückendichte"
 
 msgid "Density of external bridges. 100% means solid bridge. Default is 100%."
-msgstr "Die Standard-Einstellung für Density of external bridges ist 100%, was bedeutet, dass die Brücke als massives Material gedruckt wird. Diese Einstellung kann jedoch je nach Druckanforderungen und Objekt variieren und angepasst werden."
+msgstr ""
+"Die Standard-Einstellung für Density of external bridges ist 100%, was "
+"bedeutet, dass die Brücke als massives Material gedruckt wird. Diese "
+"Einstellung kann jedoch je nach Druckanforderungen und Objekt variieren und "
+"angepasst werden."
 
 msgid "Bridge flow"
 msgstr "Durchflussverhältnis für Brücken"
@@ -6526,7 +6536,8 @@ msgid ""
 "Improve shell precision by adjusting outer wall spacing. This also improves "
 "layer consistency."
 msgstr ""
-"Durch Anpassen des Abstands der Außenwand kann die Präzision der Schale verbessert werden. Dadurch wird auch die Schichtkonsistenz verbessert."
+"Durch Anpassen des Abstands der Außenwand kann die Präzision der Schale "
+"verbessert werden. Dadurch wird auch die Schichtkonsistenz verbessert."
 
 msgid "Only one wall on top surfaces"
 msgstr "Nur eine Wand auf der oberen Fläche"
@@ -6824,7 +6835,8 @@ msgstr "Schwelle für kleine Strukturen"
 msgid ""
 "This sets the threshold for small perimeter length. Default threshold is 0mm"
 msgstr ""
-"Dies legt die Schwelle für eine kleine Umfangslänge fest. Der Standardwert für die Schwelle beträgt 0 mm."
+"Dies legt die Schwelle für eine kleine Umfangslänge fest. Der Standardwert "
+"für die Schwelle beträgt 0 mm."
 
 msgid "Order of inner wall/outer wall/infil"
 msgstr "Reihenfolge Innenwand/Außenwand/Füllung"
@@ -7026,6 +7038,18 @@ msgstr ""
 "Der Filamentdurchmesser wird für die Berechnung der Extrusion im G-Code "
 "verwendet, er ist also wichtig und sollte genau sein"
 
+msgid "Shrinkage"
+msgstr ""
+
+#, c-format, boost-format
+msgid ""
+"Enter the shrinkage percentage that the filament will get after cooling "
+"(94% if you measure 94mm instead of 100mm). The part will be scaled in xy to "
+"compensate. Only the filament used for the perimeter is taken into account.\n"
+"Be sure to allow enough space between objects, as this compensation is done "
+"after the checks."
+msgstr ""
+
 msgid "Density"
 msgstr "Dichte"
 
@@ -7165,6 +7189,25 @@ msgid "Acceleration of outer wall. Using a lower value can improve quality"
 msgstr ""
 "Beschleunigung der Außenwand. Die Verwendung eines niedrigeren Wertes kann "
 "die Qualität verbessern"
+
+msgid ""
+"Acceleration of bridges. If the value is expressed as a percentage (e.g. "
+"50%), it will be calculated based on the outer wall acceleration."
+msgstr ""
+
+msgid "mm/s² or %"
+msgstr ""
+
+msgid ""
+"Acceleration of sparse infill. If the value is expressed as a percentage (e."
+"g. 100%), it will be calculated based on the default acceleration."
+msgstr ""
+
+msgid ""
+"Acceleration of internal solid infill. If the value is expressed as a "
+"percentage (e.g. 100%), it will be calculated based on the default "
+"acceleration."
+msgstr ""
 
 msgid ""
 "Acceleration of initial layer. Using a lower value can improve build plate "
@@ -8740,6 +8783,15 @@ msgstr "Filamenteinstellungen laden"
 msgid "Load filament settings from the specified file list"
 msgstr "Filamenteinstellungen aus der angegebenen Dateiliste laden"
 
+msgid "Data directory"
+msgstr ""
+
+msgid ""
+"Load and store settings at the given directory. This is useful for "
+"maintaining different profiles or including configurations from a network "
+"storage."
+msgstr ""
+
 msgid "Output directory"
 msgstr "Ausgabeverzeichnis"
 
@@ -8917,7 +8969,7 @@ msgid ""
 "End temp: >= 180\n"
 "Start temp > End temp + 5)"
 msgstr ""
-"Bitte geben Sie gültige Werte ein:\n" 
+"Bitte geben Sie gültige Werte ein:\n"
 "Start Temp: <= 350\n"
 "End Temp: >= 180\n"
 "Start Temp > End Temp + 5)"
@@ -8939,7 +8991,7 @@ msgid ""
 "start > 0 step >= 0\n"
 "end > start + step)"
 msgstr ""
-"Bitte geben Sie gültige Werte ein:\n" 
+"Bitte geben Sie gültige Werte ein:\n"
 "Start > 0 Schrittweite >= 0\n"
 "Ende > Start + Schrittweite)"
 
@@ -8957,7 +9009,7 @@ msgid ""
 "start > 10 step >= 0\n"
 "end > start + step)"
 msgstr ""
-"Bitte geben Sie gültige Werte ein:\n" 
+"Bitte geben Sie gültige Werte ein:\n"
 "Start > 10 Schrittweite >= 0\n"
 "Ende > Start + Schrittweite)"
 
@@ -9382,14 +9434,14 @@ msgstr ""
 #~ msgid "Show All"
 #~ msgstr "Alles anzeigen"
 
-msgid "Hide Others"
-msgstr "Andere ausblenden"
+#~ msgid "Hide Others"
+#~ msgstr "Andere ausblenden"
 
-msgid "Hide BambuStudio-SoftFever"
-msgstr "BambuStudio-SoftFever ausblenden"
+#~ msgid "Hide BambuStudio-SoftFever"
+#~ msgstr "BambuStudio-SoftFever ausblenden"
 
-msgid "Select presets to compare"
-msgstr "Wähle Voreinstellungen zum Vergleich aus"
+#~ msgid "Select presets to compare"
+#~ msgstr "Wähle Voreinstellungen zum Vergleich aus"
 
 #~ msgid "only one wall on first Layer"
 #~ msgstr "Nur eine Wand in der ersten Schicht"
@@ -9968,6 +10020,5 @@ msgstr "Wähle Voreinstellungen zum Vergleich aus"
 #~ msgid "tree"
 #~ msgstr "Baum"
 
-msgid "Recently opened"
-msgstr "Kürzlich geöffnet"
-
+#~ msgid "Recently opened"
+#~ msgstr "Kürzlich geöffnet"
