--- a/bbl/i18n/es/BambuStudio_es.po
+++ b/bbl/i18n/es/BambuStudio_es.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-02-17 23:01+0800\n"
+"POT-Creation-Date: 2023-03-05 17:03+0800\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -5362,6 +5362,9 @@ msgstr ""
 msgid "Gizmo FDM paint-on seam"
 msgstr ""
 
+msgid "Swtich between Prepare/Prewview"
+msgstr ""
+
 msgid "Plater"
 msgstr "Plataforma"
 
@@ -5429,6 +5432,9 @@ msgstr ""
 
 msgid "On/Off one layer mode of the vertical slider"
 msgstr "Activar/Desactivar el modo de una capa del control deslizante vertical"
+
+msgid "On/Off g-code window"
+msgstr ""
 
 msgid "Move slider 5x faster"
 msgstr "Mover el deslizador 5 veces más rápido"
@@ -6685,6 +6691,18 @@ msgstr ""
 "El diámetro del filamento se utiliza para calcular la extrusión en el gcode, "
 "por lo que es importante y debe ser preciso"
 
+msgid "Shrinkage"
+msgstr ""
+
+#, c-format, boost-format
+msgid ""
+"Enter the shrinkage percentage that the filament will get after cooling "
+"(94% if you measure 94mm instead of 100mm). The part will be scaled in xy to "
+"compensate. Only the filament used for the perimeter is taken into account.\n"
+"Be sure to allow enough space between objects, as this compensation is done "
+"after the checks."
+msgstr ""
+
 msgid "Density"
 msgstr "Densidad"
 
@@ -6820,6 +6838,25 @@ msgstr ""
 "bajo puede mejorar la calidad de la superficie superior"
 
 msgid "Acceleration of outer wall. Using a lower value can improve quality"
+msgstr ""
+
+msgid ""
+"Acceleration of bridges. If the value is expressed as a percentage (e.g. "
+"50%), it will be calculated based on the outer wall acceleration."
+msgstr ""
+
+msgid "mm/s² or %"
+msgstr ""
+
+msgid ""
+"Acceleration of sparse infill. If the value is expressed as a percentage (e."
+"g. 100%), it will be calculated based on the default acceleration."
+msgstr ""
+
+msgid ""
+"Acceleration of internal solid infill. If the value is expressed as a "
+"percentage (e.g. 100%), it will be calculated based on the default "
+"acceleration."
 msgstr ""
 
 msgid ""
@@ -8249,6 +8286,15 @@ msgstr "Cargar los ajustes del filamento"
 msgid "Load filament settings from the specified file list"
 msgstr ""
 "Cargar los ajustes del filamento desde la lista de archivos especificada"
+
+msgid "Data directory"
+msgstr ""
+
+msgid ""
+"Load and store settings at the given directory. This is useful for "
+"maintaining different profiles or including configurations from a network "
+"storage."
+msgstr ""
 
 msgid "Output directory"
 msgstr "Directorio de salida"
