--- a/bbl/i18n/nl/BambuStudio_nl.po
+++ b/bbl/i18n/nl/BambuStudio_nl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-02-17 23:01+0800\n"
+"POT-Creation-Date: 2023-03-05 17:03+0800\n"
 "Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -5370,6 +5370,9 @@ msgstr ""
 msgid "Gizmo FDM paint-on seam"
 msgstr ""
 
+msgid "Swtich between Prepare/Prewview"
+msgstr ""
+
 msgid "Plater"
 msgstr "Plaat"
 
@@ -5435,6 +5438,9 @@ msgstr "Horizontale schuifbalk - Beweeg actieve duim naar rechts"
 
 msgid "On/Off one layer mode of the vertical slider"
 msgstr "Aan/uit één laagmodus van de verticale schuifregelaar"
+
+msgid "On/Off g-code window"
+msgstr ""
 
 msgid "Move slider 5x faster"
 msgstr "Schuifregelaar 5x sneller verplaatsen"
@@ -6691,6 +6697,18 @@ msgstr ""
 "Filamentdiameter wordt gebruikt om de extrusie in de G-code te berekenen, "
 "het is dus belangrijk dat deze nauwkeurig wordt ingegeven"
 
+msgid "Shrinkage"
+msgstr ""
+
+#, c-format, boost-format
+msgid ""
+"Enter the shrinkage percentage that the filament will get after cooling "
+"(94% if you measure 94mm instead of 100mm). The part will be scaled in xy to "
+"compensate. Only the filament used for the perimeter is taken into account.\n"
+"Be sure to allow enough space between objects, as this compensation is done "
+"after the checks."
+msgstr ""
+
 msgid "Density"
 msgstr "Dichtheid"
 
@@ -6826,6 +6844,25 @@ msgstr ""
 "kan de kwaliteit van de bovenlaag verbeteren."
 
 msgid "Acceleration of outer wall. Using a lower value can improve quality"
+msgstr ""
+
+msgid ""
+"Acceleration of bridges. If the value is expressed as a percentage (e.g. "
+"50%), it will be calculated based on the outer wall acceleration."
+msgstr ""
+
+msgid "mm/s² or %"
+msgstr ""
+
+msgid ""
+"Acceleration of sparse infill. If the value is expressed as a percentage (e."
+"g. 100%), it will be calculated based on the default acceleration."
+msgstr ""
+
+msgid ""
+"Acceleration of internal solid infill. If the value is expressed as a "
+"percentage (e.g. 100%), it will be calculated based on the default "
+"acceleration."
 msgstr ""
 
 msgid ""
@@ -8264,6 +8301,15 @@ msgstr "Filament instellingen laden"
 
 msgid "Load filament settings from the specified file list"
 msgstr "Filament instellingen laden vanuit een bestandslijst"
+
+msgid "Data directory"
+msgstr ""
+
+msgid ""
+"Load and store settings at the given directory. This is useful for "
+"maintaining different profiles or including configurations from a network "
+"storage."
+msgstr ""
 
 msgid "Output directory"
 msgstr "Uitvoermap"
