--- a/bbl/i18n/OrcaSlicer.pot
+++ b/bbl/i18n/OrcaSlicer.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-03-12 09:40+0800\n"
+"POT-Creation-Date: 2023-03-16 00:03+0800\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -4074,6 +4074,12 @@ msgstr ""
 msgid "If enabled, useful hints are displayed at startup."
 msgstr ""
 
+msgid "Show g-code window"
+msgstr ""
+
+msgid "If enabled, g-code window will be displayed."
+msgstr ""
+
 msgid "User sync"
 msgstr ""
 
@@ -5845,6 +5851,13 @@ msgid ""
 "password@your-octopi-address/"
 msgstr ""
 
+msgid "Device UI"
+msgstr ""
+
+msgid ""
+"Specify the URL of your device user interface if it's not same as print_host"
+msgstr ""
+
 msgid "API Key / Password"
 msgstr ""
 
@@ -6683,6 +6696,12 @@ msgstr ""
 msgid "Speed of solid infill part of initial layer"
 msgstr ""
 
+msgid "Initial layer travel speed"
+msgstr ""
+
+msgid "Travel speed of initial layer"
+msgstr ""
+
 msgid "Initial layer nozzle temperature"
 msgstr ""
 
@@ -6798,6 +6817,25 @@ msgid "What kind of gcode the printer is compatible with"
 msgstr ""
 
 msgid "Klipper"
+msgstr ""
+
+msgid "Label objects"
+msgstr ""
+
+msgid ""
+"Enable this to add comments into the G-Code labeling print moves with what "
+"object they belong to, which is useful for the Octoprint CancelObject "
+"plugin. This settings is NOT compatible with Single Extruder Multi Material "
+"setup and Wipe into Object / Wipe into Infill."
+msgstr ""
+
+msgid "Verbose G-code"
+msgstr ""
+
+msgid ""
+"Enable this to get a commented G-code file, with each line explained by a "
+"descriptive text. If you print from SD card, the additional weight of the "
+"file could make your firmware slow down."
 msgstr ""
 
 msgid "Infill combination"
@@ -7593,6 +7631,20 @@ msgstr ""
 msgid ""
 "Enabling this option means the height of  tree support layer except the "
 "first will be automatically calculated "
+msgstr ""
+
+msgid "Auto brim width"
+msgstr ""
+
+msgid ""
+"Enabling this option means the width of the brim for tree support will be "
+"automatically calculated"
+msgstr ""
+
+msgid "Tree support brim width"
+msgstr ""
+
+msgid "Distance from tree branch to the outermost brim line"
 msgstr ""
 
 msgid "Tree support branch diameter"
